[gd_scene load_steps=5 format=2]

[ext_resource path="res://Picture_Imports/Items/Heart.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Heart.gd" type="Script" id=2]
[ext_resource path="res://sounds/healthPickup.wav" type="AudioStream" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 70, 58 )

[node name="Heart" type="Area2D"]
scale = Vector2( 0.3, 0.3 )
collision_layer = 4
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -4 )
shape = SubResource( 1 )

[node name="HealthAudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )

[node name="TimerToDestroy" type="Timer" parent="."]
[connection signal="body_entered" from="." to="." method="_on_Heart_body_entered"]
[connection signal="finished" from="HealthAudioStreamPlayer2D" to="." method="_on_HealthAudioStreamPlayer2D_finished"]
[connection signal="timeout" from="TimerToDestroy" to="." method="_on_TimerToDestroy_timeout"]
